# cmake_opengl

./: CMakeLists.txt  README.md
libs/glad/: CMakeLists.txt  glad.c
libs/glad/include/glad/: glad.h
src/: index.cpp
src/sum/: sum.cpp
